--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:pdf": "resume export resume.pdf"
   },
   "dependencies": {
+    "jsonresume-theme-stackoverflow": "^2.1.0",
     "resume-cli": "^3.0.4"
   }
 }
