--- a/.github/workflows/generate-resume.yml
+++ b/.github/workflows/generate-resume.yml
@@ -18,12 +18,12 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install resume-cli and elegant theme
+      - name: Install resume-cli and favorite themes
         run: |
-          npm install jsonresume-theme-stackoverflow
+          npm install jsonresume-theme-stackoverflow jsonresume-theme-elegant jsonresume-theme-class
 
       - name: Generate HTML Resume
-        run: npx resume export resume.html --theme stackoverflow
+        run: npx resume export resume.html --theme flat
 
       - name: Install wkhtmltopdf
         run: sudo apt-get update && sudo apt-get install -y wkhtmltopdf
