--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build:pdf": "resume export resume.pdf"
   },
   "dependencies": {
-    "jsonresume-theme-class": "^0.1.2",
-    "jsonresume-theme-elegant": "^1.16.1",
     "jsonresume-theme-stackoverflow": "^2.2.0",
-    "resume-cli": "^3.0.8"
+    "puppeteer": "^24.37.5",
+    "resume-cli": "^3.0.4",
+    "resumed": "^6.1.0"
   }
 }
