Try the professional theme, disable custom style
I'll probably want to modify it later, but you can't just set the
background to another color and expect everything to work

--- a/.github/workflows/generate-resume.yml
+++ b/.github/workflows/generate-resume.yml
@@ -21,20 +21,20 @@ jobs:
 
       - name: Install tools and themes
         run: |
-          npm install resumed jsonresume-theme-stackoverflow puppeteer
+          npm install resumed jsonresume-theme-stackoverflow json-resume-theme-professional puppeteer
 
       - name: Generate HTML Resume
         run: |
           # Render the HTML using the stackoverflow theme
-          npx resumed render resume.json -o resume.html -t jsonresume-theme-stackoverflow
+          npx resumed render resume.json -o resume.html -t jsonresume-theme-professional
           
-          # Inject CSS to force any custom styles
+          # Inject CSS to force any custom styles, currently disabled
           echo '<style>
             body, .container, .main, #resume { 
-              background-color: lightblue !important; 
-              background: white !important;
+              background-color: black !important; 
+              background: black !important;
             }
-          </style>' >> resume.html
+          </style>' >> /dev/null ; :resume.html
 
       - name: Generate PDF Resume
         run: |
