--- a/.github/workflows/generate-resume.yml
+++ b/.github/workflows/generate-resume.yml
@@ -21,26 +21,30 @@ jobs:
 
       - name: Install tools and themes
         run: |
-          # Quiet deprecation warnings, install latest Puppeteer
-          npm install --loglevel=error resumed jsonresume-theme-stackoverflow puppeteer@latest
+          npm install --loglevel error resumed jsonresume-theme-stackoverflow puppeteer
 
       - name: Generate HTML Resume
         run: |
-          # Render the HTML using the stackoverflow theme
           npx resumed render resume.json -o resume.html -t jsonresume-theme-stackoverflow
 
       - name: Generate PDF Resume
         run: |
-          # Use Puppeteer to print the modified HTML file directly to PDF
-          # This ensures the CSS injection above is preserved
-          npx puppeteer print resume.html resume.pdf
+          # Use --no-sandbox and --disable-setuid-sandbox for GitHub Actions
+          npx puppeteer print resume.html resume.pdf --no-sandbox --disable-setuid-sandbox
+          
+          # Explicit check to ensure the file exists before moving on
+          if [ ! -f resume.pdf ]; then
+            echo "PDF generation failed!"
+            exit 1
+          fi
 
       - name: Commit generated files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git pull
-          git add resume.html resume.pdf
+          # Force add both to ensure they are tracked
+          git add -f resume.html resume.pdf
           git commit -m "Auto-generate white-background resume and PDF" || echo "No changes to commit"
           git push
         env:
@@ -52,5 +56,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
           publish_branch: gh-pages
-
-
